--- a/css/gold.css
+++ b/css/gold.css
@@ -285,13 +285,14 @@ li a:hover:not(.active){
 }
 
 .footer-list li{
-    display: inline-block;
+    display: block;
     list-style: none;
 }
 
-    .footer-list li a{
+.footer-list li a{
     color:#e3bf5e ;
-    margin: 0 15px;     
+    margin: 0 15px; 
+    line-height: 40px;    
 }
 
 .polices-list li{
@@ -308,7 +309,7 @@ li a:hover:not(.active){
 .qa ul li{
     line-height: 40px;
     list-style: none;
-    padding-left: 200px;
+    /* padding-left: 200px; */
     font-size: 22px;
     color:#e3bf5e ;
 
