--- a/css/home.css
+++ b/css/home.css
@@ -130,10 +130,9 @@ li a:hover:not(.active){
 
 .home-content{
     position: absolute;
-    top:76%;
+    top:60%;
     left: 75%;
-    margin-left: auto;
-    margin-right: auto;
+    
     background-color: #17161855;
     width: 22%;
     height: 20%;
@@ -207,7 +206,7 @@ li a:hover:not(.active){
 }
 
 .footer-list li{
-    display: inline-block;
+    display: block;
     list-style: none;
 }
 
@@ -231,7 +230,7 @@ li a:hover:not(.active){
 .qa ul li{
     line-height: 40px;
     list-style: none;
-    padding-left: 250px;
+    /* padding-left: 250px; */
     /* padding-right: 150px; */
     font-size: 22px;
     color:#e3bf5e ;
