--- a/css/about-us.css
+++ b/css/about-us.css
@@ -1,18 +1,13 @@
-
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box; /* css 3 */
+    box-sizing: border-box; 
 }
-
-
-
 
 body{
     font-family: 'PT Sans', sans-serif;
     background-color:#171717 ;
 }
-
 
 a{
     text-decoration:none;
@@ -20,7 +15,6 @@ a{
 header{
     background-color: #171717;
     width: 100%;
-    /* margin-bottom: 50px; */
 }
 
 header .header-content{
@@ -33,26 +27,20 @@ header .header-content{
 
 .header-content img{
     max-width:230px;
-    height: auto;
-    
+    height: auto;   
 }
  
-.header-content nav{
-    
-    margin-right: 4%;
-    
+.header-content nav{   
+    margin-right: 4%;   
  }
 
 .header-content li{
-    display: inline-block; 
-    
-   
+    display: inline-block;  
 }
 
 .header-content nav ul{
     overflow: hidden; 
-    display: flex;  
-    
+    display: flex;    
 }
 
 .header-content nav ul li a{
@@ -70,49 +58,34 @@ li a:hover:not(.active){
 
 .active{
     background-color:#4b422b ;    
-
 }
-
-
-
-
-
-
 
 .cover img{
   margin-left:17.5%;
   width: 65%;
   height: 450px;
-  border: 3px solid #e3bf5e;
-  
+  border: 3px solid #e3bf5e; 
 }
-
-
-
 
 .history{
   margin-top: 100px;
   margin-bottom: 120px;
   display: flex;
   justify-content: space-between;
-  
   margin-right: 10%;
   margin-left: 10%;
 
 }
 
-
 .desc1,
 .desc2
 {
   text-align: left;
- 
   float: left;
   color: silver;
   font-size: 25px;
   line-height: 35px;
-  width: 55%;
-  
+  width: 55%; 
 }
 
 .tit1,
@@ -121,28 +94,15 @@ li a:hover:not(.active){
   color: #e3bf5e;
   margin-bottom: 20px;
   font-size: 40px;
-
 }
-
 
 .descb{
   margin-left: -200px;
   border-left: 1px solid #e3bf5e ;
   padding-left: 200px;
   margin-right: -320px;
- 
 }
-
-
-
-
-                    
-
-
-
-
                                     /*footer*/
-
 .footer{
     width:100%;
     margin: auto;
@@ -153,11 +113,11 @@ li a:hover:not(.active){
 }
 
 .footer-content{
-        display: flex;
-        justify-content: space-between;
-        margin-left: 4%;
-        margin-right: 4%;
-        align-items: center;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 4%;
+    margin-right: 4%;
+    align-items: center;
 }
 
 .footer-list li{
@@ -185,10 +145,8 @@ li a:hover:not(.active){
 .qa ul li{
     line-height: 40px;
     list-style: none;
-    /* padding-left: 200px; */
     font-size: 22px;
     color:#e3bf5e ;
-
 }
 
 .copyrights{
@@ -197,5 +155,3 @@ li a:hover:not(.active){
     padding-right: 30px;
     color:silver ;
 }
-                                    
-
