--- a/css/diamond.css
+++ b/css/diamond.css
@@ -1,18 +1,13 @@
-
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box; /* css 3 */
+    box-sizing: border-box; 
 }
-
-
-
 
 body{
     font-family: 'PT Sans', sans-serif;
     background-color:#171717 ;
 }
-
 
 a{
     text-decoration:none;
@@ -22,7 +17,6 @@ header{
     width: 100%;
     margin-bottom: 50px;
 }
-
 header .header-content{
     display: flex;
     justify-content: space-between;
@@ -33,26 +27,20 @@ header .header-content{
 
 .header-content img{
     max-width:230px;
-    height: auto;
-    
+    height: auto;   
 }
  
-.header-content nav{
-    
-    margin-right: 4%;
-    
+.header-content nav{   
+    margin-right: 4%;  
  }
 
 .header-content li{
-    display: inline-block; 
-    
-   
+    display: inline-block;   
 }
 
 .header-content nav ul{
     overflow: hidden; 
-    display: flex;  
-    
+    display: flex;     
 }
 
 .header-content nav ul li a{
@@ -70,17 +58,7 @@ li a:hover:not(.active){
 
 .active{
     background-color:#777570 ;    
-}
-                                   
-
-
-
-
-
-
-
-
-
+}                           
                                                 /* home */
 
 .tex{
@@ -90,24 +68,16 @@ li a:hover:not(.active){
     text-align: center;
 }
 
-
- 
-
 .home-content{
     overflow: hidden;
     margin-top: 40px;
     margin: auto;
-    margin-left: 4%;
-  
+    margin-left: 4% 
 }
 
-
-
-.text{
-    
+.text{   
     margin-top: 40px;
-    font-size: 30px;
-    
+    font-size: 30px; 
     color:silver ;
     position: relative;
     display: inline-block;
@@ -146,11 +116,7 @@ li a:hover:not(.active){
     width: 20%;
     float: left;
     margin-bottom:5%;
-    position: relative;
-    
-
-    
-    
+    position: relative;  
 }
 
 .home-item .layer{
@@ -170,8 +136,7 @@ li a:hover:not(.active){
 }
 
 .layer .layer-info{
-    position: absolute;
-    
+    position: absolute; 
     left: 50%;
     top: 50%;
     transform:translate(-50%,-50%) ;
@@ -184,18 +149,13 @@ li a:hover:not(.active){
     display: block;
     margin-bottom: 20px;
     line-height: 50px;
-
 }
 
 .layer-info .details2{
     margin-bottom: 20px;
     font-size: 23px;
     color: red ;
-
-
 }
-
-
 
 .layer-info a i{
     display: inline-block;
@@ -205,18 +165,12 @@ li a:hover:not(.active){
     color: black;
     border-radius: 10px;
     background-color:rgb(167, 103, 103);
-    line-height: 40px;
-    
-    
-    
-
+    line-height: 40px;  
 }
 
 .layer-info a + a{
     padding-left: 130px;
 }
-
-
 
 .home-item img{
     width: 100%;
@@ -224,17 +178,8 @@ li a:hover:not(.active){
 }
 
 .home-item{
-    margin: 5% 2%;
-    
-
+    margin: 5% 2%;  
 }
-
-
-                    
-
-
-
-
                                     /*footer*/
 
 .footer{
@@ -247,11 +192,11 @@ li a:hover:not(.active){
 }
 
 .footer-content{
-        display: flex;
-        justify-content: space-between;
-        margin-left: 4%;
-        margin-right: 4%;
-        align-items: center;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 4%;
+    margin-right: 4%;
+    align-items: center;
 }
 
 .footer-list li{
@@ -277,13 +222,10 @@ li a:hover:not(.active){
 }
 
 .qa ul li{
-    line-height: 40px;
-    
+    line-height: 40px; 
     list-style: none;
-    /* padding-left: 200px; */
     font-size: 22px;
     color:silver ;
-
 }
 
 .copyrights{
