--- a/css/gold.css
+++ b/css/gold.css
@@ -1,22 +1,18 @@
-
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box; /* css 3 */
+    box-sizing: border-box;
 }
-
-
-
 
 body{
     font-family: 'PT Sans', sans-serif;
     background-color:#171717 ;
 }
 
-
 a{
     text-decoration:none;
 }
+
 header{
     background-color: #171717;
     width: 100%;
@@ -33,26 +29,20 @@ header .header-content{
 
 .header-content img{
     max-width:230px;
-    height: auto;
-    
+    height: auto;   
 }
  
-.header-content nav{
-    
-    margin-right: 4%;
-    
+.header-content nav{   
+    margin-right: 4%;   
  }
 
 .header-content li{
-    display: inline-block; 
-    
-   
+    display: inline-block;  
 }
 
 .header-content nav ul{
     overflow: hidden; 
-    display: flex;  
-    
+    display: flex;     
 }
 
 .header-content nav ul li a{
@@ -70,31 +60,19 @@ li a:hover:not(.active){
 
 .active{
     background-color:#4b422b ;    
-}
-                                   
-
-
-
-
-
-
-
-
+}                                  
 
                                                 /* home */
-
 #clear {
     clear: both;
 }
-
 
 .tex{
     color: #e3bf5e ;
     margin-left: 2%;
     margin-right: 80%;
     text-align: center;
-    float: left;
-    
+    float: left;    
 }
 
 .texr{
@@ -105,8 +83,6 @@ li a:hover:not(.active){
     text-align: center;
     float:left;
     margin-top: -110px;
-    
-
 }
 
 .texr button{
@@ -116,28 +92,19 @@ li a:hover:not(.active){
     height: 50px;
     border-radius: 20px;
     font-size: 17px;
-    font-weight: bold;
-    
+    font-weight: bold;   
 }
-
-
- 
 
 .home-content{
     overflow: hidden;
     margin-top: 40px;
     margin: auto;
     margin-left: 4%;
-  
 }
 
-
-
 .text{
-    
     margin-top: 40px;
     font-size: 30px;
-    
     color:#e3bf5e ;
     position: relative;
     display: inline-block;
@@ -176,11 +143,7 @@ li a:hover:not(.active){
     width: 20%;
     float: left;
     margin-bottom:5%;
-    position: relative;
-    
-
-    
-    
+    position: relative;     
 }
 
 .home-item .layer{
@@ -201,7 +164,6 @@ li a:hover:not(.active){
 
 .layer .layer-info{
     position: absolute;
-    
     left: 50%;
     top: 50%;
     transform:translate(-50%,-50%) ;
@@ -221,11 +183,7 @@ li a:hover:not(.active){
     margin-bottom: 20px;
     font-size: 23px;
     color: red ;
-
-
 }
-
-
 
 .layer-info a i{
     display: inline-block;
@@ -235,18 +193,12 @@ li a:hover:not(.active){
     color: black;
     border-radius: 10px;
     background-color:#b4974595;
-    line-height: 40px;
-    
-    
-    
-
+    line-height: 40px;   
 }
 
 .layer-info a + a{
     padding-left: 130px;
 }
-
-
 
 .home-item img{
     width: 100%;
@@ -255,18 +207,8 @@ li a:hover:not(.active){
 
 .home-item{
     margin: 5% 2%;
-    
-
 }
-
-
-                    
-
-
-
-
                                     /*footer*/
-
 .footer{
     width:100%;
     margin: auto;
@@ -277,11 +219,11 @@ li a:hover:not(.active){
 }
 
 .footer-content{
-        display: flex;
-        justify-content: space-between;
-        margin-left: 4%;
-        margin-right: 4%;
-        align-items: center;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 4%;
+    margin-right: 4%;
+    align-items: center;
 }
 
 .footer-list li{
@@ -309,12 +251,9 @@ li a:hover:not(.active){
 .qa ul li{
     line-height: 40px;
     list-style: none;
-    /* padding-left: 200px; */
     font-size: 22px;
     color:#e3bf5e ;
-
 }
-
 .copyrights{
     text-align: center;
     padding-top: 50px;
