--- a/css/our-stores.css
+++ b/css/our-stores.css
@@ -1,26 +1,21 @@
-
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box; /* css 3 */
+    box-sizing: border-box;
 }
-
-
-
 
 body{
     font-family: 'PT Sans', sans-serif;
     background-color:#171717 ;
 }
 
-
 a{
     text-decoration:none;
 }
+
 header{
     background-color: #171717;
     width: 100%;
-    /* margin-bottom: 50px; */
 }
 
 header .header-content{
@@ -33,26 +28,20 @@ header .header-content{
 
 .header-content img{
     max-width:230px;
-    height: auto;
-    
+    height: auto;   
 }
  
-.header-content nav{
-    
-    margin-right: 4%;
-    
+.header-content nav{  
+    margin-right: 4%;   
  }
 
 .header-content li{
-    display: inline-block; 
-    
-   
+    display: inline-block;   
 }
 
 .header-content nav ul{
     overflow: hidden; 
-    display: flex;  
-    
+    display: flex;    
 }
 
 .header-content nav ul li a{
@@ -70,10 +59,7 @@ li a:hover:not(.active){
 
 .active{
     background-color:#4b422b ;    
-
 }
-
-
 
 .table{
     width: 80%;
@@ -82,7 +68,6 @@ li a:hover:not(.active){
     margin-top: 100px;
     border: 2px solid #171717;
     border-spacing: 20px;
-
 }
 .table td{
     width: 100px;
@@ -90,17 +75,11 @@ li a:hover:not(.active){
     border: 1px solid #e3bf5e;
     background-color: #ffefc3;
     text-align: left;
-    
-    
-    
-
 }
 .table img{
     width: 400px;
     height: 300px;
     float: left;
-    
-
 }
 
 .product-desc{
@@ -111,27 +90,17 @@ li a:hover:not(.active){
     line-height: 30px;
     font-size: 1vw;
     width: 55%;
-    max-height: 400px;
-    
+    max-height: 400px; 
 }
-
-
 
 .cover img{
   margin-left:17.5%;
   width: 65%;
   height: 400px;
   border: 3px solid #e3bf5e;
-  
 }
 
-
-
-
-
-
                                     /*footer*/
-
 .footer{
     width:100%;
     margin: auto;
@@ -142,11 +111,11 @@ li a:hover:not(.active){
 }
 
 .footer-content{
-        display: flex;
-        justify-content: space-between;
-        margin-left: 4%;
-        margin-right: 4%;
-        align-items: center;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 4%;
+    margin-right: 4%;
+    align-items: center;
 }
 
 .footer-list li{
@@ -174,7 +143,6 @@ li a:hover:not(.active){
 .qa ul li{
     line-height: 40px;
     list-style: none;
-    /* padding-left: 200px; */
     font-size: 22px;
     color:#e3bf5e ;
 
@@ -185,5 +153,4 @@ li a:hover:not(.active){
     padding-top: 50px;
     padding-right: 30px;
     color:silver ;
-} 
- 
+}  
